# xr

./: .gitignore  Cargo.toml  PLAN.md  README.md  STATUS.md  TODO.md
.claude/skills/xrefs/: SKILL.md
docs/: STATUS.md
scripts/: analyze_adrp_distance.py  analyze_fn_datawrite.py  analyze_fn_datawrite2.py  analyze_fp_dataptr.py  analyze_fp_dataptr2.py  analyze_got_slots.py  batch_extract_xrefs.sh  eval.py  extract_xrefs_ghidra.py  ida_export_xrefs.py  ida_extract_xrefs.py  ida_extract_xrefs_binary.py  score_all.sh  simulate_reg_tracker.py
src/: disasm.rs  lib.rs  loader.rs  main.rs  output.rs  pass.rs  rust.rs  shard.rs  va.rs  xref.rs
src/arch/: arm64.rs  arm64_decode.rs  mod.rs  x86_64.rs
src/loader/: dyld.rs  elf.rs  macho.rs  mod.rs  pe.rs
